# Crane

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml
crane/: Cargo.toml  README.md
crane-core/: Cargo.toml
crane-core/kernels/: gdn.cu
crane-core/src/: autotokenizer.rs  bins.rs  lib.rs
crane-core/src/fused_ops/: mod.rs
crane-core/src/gdn/: cuda_backend.rs  mod.rs
crane-core/src/generation/: based.rs  mod.rs
crane-core/src/models/: mod.rs  moonshine_asr.rs  paddleocr_vl.rs  silero_vad.rs  utils.rs  with_tracing.rs
crane-core/src/models/gemma4/: mod.rs  model.rs  modeling.rs  vision.rs  vlm.rs
crane-core/src/models/hunyuan_dense/: mod.rs  model.rs  modeling.rs
crane-core/src/models/modules/: attention.rs  conn_ve_llm.rs  ffn.rs  flash_attn.rs  kv_cache.rs  mel.rs  mod.rs  rotary.rs  siglip2.rs  transformer.rs
crane-core/src/models/moonshine_asr/: model.rs
crane-core/src/models/orpheus/: model.rs
crane-core/src/models/paddleocr_vl/: model.rs
crane-core/src/models/qwen25/: mod.rs  model.rs  qwen2.rs
crane-core/src/models/qwen3/: model.rs  modeling.rs
crane-core/src/models/qwen3_5/: config.rs  kv_cache.rs  mod.rs  model.rs  modeling.rs
crane-core/src/models/qwen3_6/: mod.rs
crane-core/src/models/qwen3_asr/: audio_encoder.rs  config.rs  feature_extractor.rs  mod.rs  model.rs  modeling.rs
crane-core/src/models/qwen3_tts/: mod.rs  model.rs  modeling.rs  speech_tokenizer_v2.rs
crane-core/src/models/qwen3_vl/: config.rs  text.rs
crane-core/src/models/silero_vad/: model.rs
crane-core/src/models/snac_onnx/: model.rs
crane-core/src/models/voxtral_tts/: README.md  codec.rs  mod.rs  model.rs  modeling.rs
crane-core/src/ops/: linear.rs  mod.rs
crane-core/src/ops/fused_ops/: cuda_impl.rs
crane-core/src/ops/gdn/: backend.rs  cache.rs  config.rs  cuda_backend.rs  layer.rs  mod.rs  norm.rs  projection.rs
crane-core/src/utils/: candle_utils.rs  image_utils.rs  mod.rs  tokenizer_utils.rs  utils.rs
crane-core/tests/: qwen3_5_quant.rs
crane-oai/: Cargo.toml  README.md
crane-oai/src/: chat_template.rs  main.rs  openai_api.rs  sglang_api.rs
crane-oai/src/engine/: backend.rs  mod.rs  model_factory.rs  sampling.rs  scheduler.rs  sequence.rs  stats.rs  types.rs
crane-oai/src/handlers/: common.rs  mod.rs  openai.rs  sglang.rs  tts.rs  vlm.rs
crane-serve/: Cargo.toml  README.md
crane-serve/src/: chat_template.rs  lib.rs  main.rs  openai_api.rs  sglang_api.rs
crane-serve/src/engine/: backend.rs  mod.rs  model_factory.rs  sampling.rs  scheduler.rs  sequence.rs  stats.rs  types.rs
crane-serve/src/handlers/: asr.rs  common.rs  mod.rs  openai.rs  sglang.rs  sse.rs  tts.rs  vlm.rs
crane/src/: lib.rs  main.rs  utils.rs
crane/src/audio/: asr.rs  asr_client.rs  asr_qwen3.rs  mod.rs  pcm.rs  tts.rs  tts_client.rs  tts_qwen3.rs  tts_voxtral.rs
crane/src/chat/: client.rs  mod.rs  types.rs
crane/src/common/: config.rs  error.rs  mod.rs
crane/src/demos/: moonshine_asr.rs
crane/src/demos/example/: main.rs
crane/src/demos/server/: main.rs
crane/src/engine/: cache.rs  mod.rs  model_factory.rs  runtime.rs  sampling.rs  scheduler.rs  sequence.rs  types.rs  vlm_types.rs
crane/src/llm/: client.rs  mod.rs  types.rs
crane/src/multimodal/: mod.rs  vision_language.rs
crane/src/vision/: image_analysis.rs  mod.rs  ocr.rs
data/audio/: kinsenka_3.txt
example/: Cargo.toml  README.md
example/src/: asr_simple.rs  bm_resize.rs  chat_cli.rs  chat_simple.rs  chat_streaming.rs  gemma4_simple.rs  hunyuan_simple.rs  ocr_simple.rs  orion_translate.rs  ornith_tools.rs  tts_custom_voice.rs  tts_simple.rs  tts_voice_clone.rs  vision_simple.rs  voxtral_tts_simple.rs
scripts/: hf_vision_reference.py  test_gemma4.sh  test_gemma4_gguf.sh  test_gemma4_vlm.sh  test_ocr.sh
tests/: BENCHMARK.md  crane_client.py  export_qwen_tts_tokenizer_onnx.py  speed_torch_qwen3_asr.py  test_cv.py  test_cv2.py  test_gemma4.sh  test_gemma4_gguf.sh  test_moonshine.py
