[workspace]
members = ["crane-core", "crane", "crane-serve", "example"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/lucasjinreal/Crane"
authors = ["Nicholas Jela<nicholasjela@gmail.com>"]

[workspace.dependencies]
candle-core = "0.11"
candle-nn = "0.11"
candle-transformers = "0.11"
candle-onnx = "0.11"
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }
