[package]
name = "crane-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"

candle-nn = "^0.9.2-alpha.2"
candle-transformers = "0.9.2-alpha.2"
candle-onnx = { version = "0.9.2-alpha.2", optional = true }
clap = { version = "4.5.32", features = ["derive"] }
hf-hub = "0.4.2"
minijinja = { version = "2.15.1", features = ["builtins"] }
minijinja-contrib = { version = "2.15.1", features = ["pycompat"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokenizers = "0.22.2"
ribo = "0.1.3"

intel-mkl-src = { version = "0.8.1", optional = true }
hound = "3.5.1"
rustfft = "6"
image = "0.25.9"
half = "2"
rubato = "1.0"
audioadapter-buffers = "2.0.0"

# candle-core = { version = "0.9.2-alpha.2", features = ["accelerate"] }

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
candle-core = { version = "0.9.2-alpha.2", features = ["metal"] }

[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
candle-core = { version = "0.9.2-alpha.2", features = ["accelerate"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = { version = "0.9.2-alpha.2" }

[features]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
    "dep:bindgen_cuda",
]
cudnn = ["candle-core/cudnn"]
mkl = [
    "dep:intel-mkl-src",
    "candle-core/mkl",
    "candle-nn/mkl",
    "candle-transformers/mkl",
]
accelerate = ["candle-core/accelerate"]
onnx = ["dep:candle-onnx"]
[build-dependencies]
bindgen_cuda = { version = "0.1.6", optional = true }