[package]
name = "crane-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# CUDA-only micro-benchmark for the fused GDN recurrence kernel.
[[bin]]
name = "gdn_bench"
required-features = ["cuda"]

[dependencies]
anyhow = "1.0.97"

candle-nn = { workspace = true }
candle-transformers = { workspace = true }
candle-onnx = { workspace = true, optional = true }
clap = { version = "4.5.32", features = ["derive"] }
hf-hub = "0.5.0"
minijinja = { version = "2.15.1", features = ["builtins", "preserve_order"] }
minijinja-contrib = { version = "2.15.1", features = ["pycompat"] }
serde = "1.0.219"
# preserve_order: JSON object keys keep insertion order (matches Python's
# json.dumps / HF chat templates — needed for byte-identical tool rendering).
serde_json = { version = "1.0.140", features = ["preserve_order"] }
tokenizers = "0.23.1"
ribo = "0.1.3"
base64 = "0.22"
fancy-regex = "0.13"
tekken-rs = "0.1.1"
zip = "2"


intel-mkl-src = { version = "0.8.1", optional = true }
rustfft = "6"
image = "0.25.9"
half = "2"

# candle-core = { workspace = true, features = ["accelerate"] }

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
candle-core = { workspace = true, features = ["metal"] }
candle-nn = { workspace = true, features = ["metal"] }

[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
candle-core = { workspace = true, features = ["accelerate"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = { workspace = true }

[features]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
    "dep:bindgen_cuda",
]
cudnn = ["candle-core/cudnn"]
mkl = [
    "dep:intel-mkl-src",
    "candle-core/mkl",
    "candle-nn/mkl",
    "candle-transformers/mkl",
]
accelerate = ["candle-core/accelerate"]
onnx = ["dep:candle-onnx"]
[dev-dependencies]
tempfile = "3"

[build-dependencies]
bindgen_cuda = { version = "0.1.6", optional = true }
