[package]
name = "crane-serve"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "crane_serve"
path = "src/lib.rs"

[dependencies]
crane-core = { path = "../crane-core" }
anyhow = "1.0.100"
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokenizers = { workspace = true, default-features = false, features = ["onig"] }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
reqwest = { version = "0.12", features = ["stream"] }
tempfile = "3"
hound = "3.5.1"

[features]
cuda = ["crane-core/cuda"]
cudnn = ["crane-core/cudnn"]
mkl = ["crane-core/mkl"]

[dev-dependencies]
tempfile = "3"
