[package]
name = "crane"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.97"
clap = {version = "4.5.32", features = ["derive"]}
colored = "3.0.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "2.0"
nvml-wrapper = { version = "0.10", optional = true }

crane-core = { path = "../crane-core" }
crane-serve = { path = "../crane-serve" }
ribo = "0.1.3"
tokenizers = { workspace = true }

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
candle-core = { workspace = true, features = ["metal"] }

[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
candle-core = { workspace = true, features = ["accelerate"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = { workspace = true }

[features]
onnx = ["crane-core/onnx"]
cuda = ["crane-core/cuda", "crane-serve/cuda", "dep:nvml-wrapper"]
cudnn = ["crane-core/cudnn", "crane-serve/cudnn"]
mkl = ["crane-core/mkl", "crane-serve/mkl"]

[lib]
name = "crane"
path = "src/lib.rs"
