[package]
name = "crane"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0"
colored = "3.0.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "2.0"
nvml-wrapper = { version = "0.12", optional = true }

crane-core = { path = "../crane-core" }
hound = "3"
rubato = "3.0.0"
audioadapter-buffers = "3.0.0"
ribo = "0.1.3"
tokenizers = { workspace = true }

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
candle-core = { workspace = true, features = ["metal"] }

[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
candle-core = { workspace = true, features = ["accelerate"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = { workspace = true }

[features]
onnx = ["crane-core/onnx"]
cuda = ["crane-core/cuda", "dep:nvml-wrapper"]
cudnn = ["crane-core/cudnn"]
mkl = ["crane-core/mkl"]

[dev-dependencies]
tempfile = "3"

[lib]
name = "crane"
path = "src/lib.rs"
