[package]
name = "crane-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
crane = { path = "../crane" }
crane-core = { path = "../crane-core" }
anyhow = "1.0.100"
image = "0.25.9"

[[bin]]
name = "chat_simple"
path = "src/chat_simple.rs"

[[bin]]
name = "chat_streaming"
path = "src/chat_streaming.rs"

[[bin]]
name = "asr_simple"
path = "src/asr_simple.rs"

[[bin]]
name = "vision_simple"
path = "src/vision_simple.rs"

[[bin]]
name = "bm_resize"
path = "src/bm_resize.rs"

[[bin]]
name = "ocr_simple"
path = "src/ocr_simple.rs"

[[bin]]
name = "tts_simple"
path = "src/tts_simple.rs"

[[bin]]
name = "hunyuan_simple"
path = "src/hunyuan_simple.rs"

[features]
default = []
onnx = ["crane/onnx"]
cuda = ["crane-core/cuda"]

